tests/diagnostics_golden/diag_borrow_conflict.txt
Diagnostics Golden: Mutable Borrow Alias Conflict
Source: tests/negative/neg_own_borrow_conflict.safe

Expected diagnostic output:
------------------------------------------------------------------------
neg_own_borrow_conflict.safe:17:14: error: mutable borrow actual 'owner' aliases another actual in the same call
  |
  | 17 |       touch (owner, owner);  -- ERROR: same-root alias in one call
  |    |              ^~~~~
  |
  note: PR11.8e.2 allows same-root calls only for statically disjoint record-field paths; overlapping or unsupported paths remain rejected.
------------------------------------------------------------------------
